# CSF446_DSTN_2026_Pair26

./: README.md
lab1/take-home/: README.md
lab1/take-home/Disk_Simulator/: autograde_disk.py  disk.py
lab1/take-home/grep/: CMakeLists.txt  grep_test.c
lab1/take-home/ls_command/: CMakeLists.txt  ls.c  ls.h  ls_test.c
lab2/take-home/: myfs.c  test.py
